# Nexustrade

./: .gitignore  README.md  pyproject.toml
agents/: price_agent.py
tools/: market_tools.py
