[project]
name = "nexustrade"
version = "0.1.0"
description = ""
authors = [
    {name = "ran-coder",email = "nurkasihranea@graduate.utm.my"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "groq (>=1.2.0,<2.0.0)",
    "langchain (>=1.2.15,<2.0.0)",
    "langgraph (>=1.1.9,<2.0.0)",
    "yfinance (>=1.3.0,<2.0.0)",
    "newsapi-python (>=0.2.7,<0.3.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "ruff (>=0.15.11,<0.16.0)"
]
